--- a/Gingerbread/app.config
+++ b/Gingerbread/app.config
@@ -10,17 +10,17 @@
             <setting name="ShortCurveTolerance" serializeAs="String">
                 <value>0.0025602645573</value>
             </setting>
-            <setting name="tolGroup" serializeAs="String">
+            <setting name="tolGrouping" serializeAs="String">
                 <value>0.5</value>
             </setting>
-            <setting name="tolExpand" serializeAs="String">
+            <setting name="tolPerimeter" serializeAs="String">
                 <value>0.5</value>
             </setting>
             <setting name="tolTheta" serializeAs="String">
                 <value>0</value>
             </setting>
-            <setting name="tolDelta" serializeAs="String">
-                <value>0.15</value>
+            <setting name="tolAlignment" serializeAs="String">
+                <value>0.11</value>
             </setting>
             <setting name="tolDouble" serializeAs="String">
                 <value>1E-05</value>
@@ -47,7 +47,7 @@
                 <value />
             </setting>
             <setting name="projName" serializeAs="String">
-                <value>GingerbreadHouse</value>
+                <value>Gingerbread</value>
             </setting>
             <setting name="projAddress" serializeAs="String">
                 <value>Shanghai, China</value>
