--- a/Gingerbread/app.config
+++ b/Gingerbread/app.config
@@ -1,8 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="Gingerbread.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="Gingerbread.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
     <userSettings>
@@ -26,7 +26,7 @@
                 <value>1E-05</value>
             </setting>
             <setting name="checkInfo" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="originX" serializeAs="String">
                 <value>0</value>
@@ -41,10 +41,10 @@
                 <value>False</value>
             </setting>
             <setting name="projInfo" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="spiderPath" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="projName" serializeAs="String">
                 <value>Gingerbread</value>
@@ -53,13 +53,13 @@
                 <value>Shanghai, China</value>
             </setting>
             <setting name="projDate" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="projAuthor" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="projNumber" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="originZ" serializeAs="String">
                 <value>0</value>
@@ -81,4 +81,4 @@
             </setting>
         </Gingerbread.Properties.Settings>
     </userSettings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup></configuration>
