+ Remove space open to outdoors and bug fix
+ Azimuth setting in UI
+ Support massing with genus or space not enclosed
× RectangularGeometry.Cartesian now takes the bottom-left vertex
× PolyLoop now starts from the bottom-left vertex
× Rectangular tessellation failure at the concave, 4-vertex shape
× Poly in poly checking bugs
× Bugs when offset roof and exposed floor encounter MCR
× Wrongfully removed the point on edge. This could make E+ mistake the space as not fully enclosed and pop up warnings
× Some floor/ceiling surfaces in gbXML are closed loop. This could trigger the coincident vertex warning in E+

--- a/Gingerbread/Properties/Settings.settings
+++ b/Gingerbread/Properties/Settings.settings
@@ -59,13 +59,13 @@
     <Setting Name="originZ" Type="System.Double" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    <Setting Name="projLatitude" Type="System.String" Scope="User">
+    <Setting Name="projLatitude" Type="System.Double" Scope="User">
       <Value Profile="(Default)">31.4</Value>
     </Setting>
-    <Setting Name="projLongitude" Type="System.String" Scope="User">
+    <Setting Name="projLongitude" Type="System.Double" Scope="User">
       <Value Profile="(Default)">121.45</Value>
     </Setting>
-    <Setting Name="projElevation" Type="System.String" Scope="User">
+    <Setting Name="projElevation" Type="System.Double" Scope="User">
       <Value Profile="(Default)">5.5</Value>
     </Setting>
     <Setting Name="shadowPrev" Type="System.Boolean" Scope="User">
@@ -73,6 +73,9 @@
     </Setting>
     <Setting Name="exportShade" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="projAzimuth" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">0</Value>
     </Setting>
   </Settings>
 </SettingsFile>
