--- a/Gingerbread/app.config
+++ b/Gingerbread/app.config
@@ -26,7 +26,7 @@
                 <value>1E-05</value>
             </setting>
             <setting name="checkInfo" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="originX" serializeAs="String">
                 <value>0</value>
@@ -41,10 +41,10 @@
                 <value>False</value>
             </setting>
             <setting name="projInfo" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="spiderPath" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="projName" serializeAs="String">
                 <value>Gingerbread</value>
@@ -53,13 +53,13 @@
                 <value>Shanghai, China</value>
             </setting>
             <setting name="projDate" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="projAuthor" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="projNumber" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="originZ" serializeAs="String">
                 <value>0</value>
@@ -78,6 +78,9 @@
             </setting>
             <setting name="exportShade" serializeAs="String">
                 <value>True</value>
+            </setting>
+            <setting name="projAzimuth" serializeAs="String">
+                <value>0</value>
             </setting>
         </Gingerbread.Properties.Settings>
     </userSettings>
