--- a/Gingerbread/Properties/Settings.settings
+++ b/Gingerbread/Properties/Settings.settings
@@ -77,5 +77,8 @@
     <Setting Name="projAzimuth" Type="System.Double" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="punchMass" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
