--- a/Gingerbread/app.config
+++ b/Gingerbread/app.config
@@ -82,6 +82,9 @@
             <setting name="projAzimuth" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="punchMass" serializeAs="String">
+                <value>False</value>
+            </setting>
         </Gingerbread.Properties.Settings>
     </userSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup></configuration>
