+ floorplan review and linked Revit document
+ The program now may draw floorplans to the WPF canvas for the user to review the results. If not ideal, roll back and fix the space boundaries
+ Read wall/floor/roof information from linked Revit file. This needs more tests in the following updates

--- a/Gingerbread/Properties/Settings.settings
+++ b/Gingerbread/Properties/Settings.settings
@@ -80,5 +80,14 @@
     <Setting Name="punchMass" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="geomInfo" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="drawPrev" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="drawWall" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
