--- a/Gingerbread/packages.config
+++ b/Gingerbread/packages.config
@@ -4,4 +4,13 @@
   <package id="cef.redist.x86" version="3.3325.1758" targetFramework="net47" />
   <package id="CefSharp.Common" version="65.0.1" targetFramework="net47" />
   <package id="CefSharp.Wpf" version="65.0.1" targetFramework="net47" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="6.0.0" targetFramework="net48" />
+  <package id="System.Text.Json" version="6.0.6" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
 </packages>
