--- a/Gingerbread/app.config
+++ b/Gingerbread/app.config
@@ -94,6 +94,18 @@
             <setting name="drawWall" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="shadeIds" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="shadeNames" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="shadeCurrent" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="shadeCurrentId" serializeAs="String">
+                <value>-1</value>
+            </setting>
         </Gingerbread.Properties.Settings>
     </userSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" /></startup>
