--- a/Gingerbread/Gingerbread.csproj
+++ b/Gingerbread/Gingerbread.csproj
@@ -67,7 +67,7 @@
   <ItemGroup>
     <Compile Include="App.cs" />
     <Compile Include="BatchGeometry.cs" />
-    <Compile Include="CmdAragog.cs" />
+    <Compile Include="CmdPreview.cs" />
     <Compile Include="CmdEmendo.cs" />
     <Compile Include="CmdSimplifyCurve.cs" />
     <Compile Include="CmdPickShade.cs" />
@@ -92,6 +92,8 @@
     <Compile Include="Core\XMLSerialize.cs" />
     <Compile Include="ExtEmendo.cs" />
     <Compile Include="ExtExportXML.cs" />
+    <Compile Include="ExtPickSpace.cs" />
+    <Compile Include="ExtPreview.cs" />
     <Compile Include="ExtPickShade.cs" />
     <Compile Include="Resources\lib\Clipper.cs" />
     <Compile Include="SelectionFilters.cs" />
@@ -107,8 +109,8 @@
     <Compile Include="UtilButton3DGrayed.cs" />
     <Compile Include="Views\BaseWindow.cs" />
     <Compile Include="CmdExportXML.cs" />
-    <Compile Include="Views\ViewAragog.xaml.cs">
-      <DependentUpon>ViewAragog.xaml</DependentUpon>
+    <Compile Include="Views\ViewPreview.xaml.cs">
+      <DependentUpon>ViewPreview.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\ViewEmendo.xaml.cs">
       <DependentUpon>ViewEmendo.xaml</DependentUpon>
@@ -180,7 +182,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\ViewAragog.xaml">
+    <Page Include="Views\ViewPreview.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
