--- a/Gingerbread/app.config
+++ b/Gingerbread/app.config
@@ -106,6 +106,12 @@
             <setting name="shadeCurrentId" serializeAs="String">
                 <value>-1</value>
             </setting>
+            <setting name="prevFloorId" serializeAs="String">
+                <value>-1</value>
+            </setting>
+            <setting name="prevSpaceIds" serializeAs="String">
+                <value />
+            </setting>
         </Gingerbread.Properties.Settings>
     </userSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" /></startup>
