+ coords offset from the internal origin × skip nested null regions
× skip nested null regions (list indexation points to null thus causing System.ArgumentOutOfRangeException
+ coords offset from the internal origin. Sometimes, the Revit model's internal origin is not in line with the project basepoint. Thus, the absolute coordinates retrieved have a offset with the relative coordinates that appear. Considering more robust alignment with the coordinates in the future

--- a/Gingerbread/Properties/Settings.settings
+++ b/Gingerbread/Properties/Settings.settings
@@ -107,5 +107,8 @@
     <Setting Name="prevSpaceIds" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="offsetZ" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
