--- a/Gingerbread/app.config
+++ b/Gingerbread/app.config
@@ -112,6 +112,9 @@
             <setting name="prevSpaceIds" serializeAs="String">
                 <value />
             </setting>
+            <setting name="offsetZ" serializeAs="String">
+                <value>0</value>
+            </setting>
         </Gingerbread.Properties.Settings>
     </userSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" /></startup>
