+ reconstruct edge alignment and region detect
+ edge alignment method now replaces the original point alignment, for better support of architecture drawings with oblique axis
↑ reconstruct the region detect function. it first trims all edges with 1-degree vertices iteratively then detect all polygons within the graph by a half-curve data structure
× tolRotation now acts as angle tolerance in line segment alignment. the tolerance cannot be 0. there is no floorplan rotation now
---------------------------------------------
+ GetConvexHull() uses a convex hull instead of an orthogonal hull when the algorithm cannot locate the floorplan boundary
+ GetMinRectHull() finds the optimal bounding rectangle for special-shaped columns. this helps with the wall centerline patch at the column oblique to xy
↑ note these functions only return delta angles in radians following the right-hand rule, from vector A to vector B counter-clockwise. VectorAngle2PI(), VectorAnglePI(), and VectorAnglePI_2() return angles in (0-2PI) (0-PI) and (0-PI) correspondingly. this is in line with the Rhino.API functions. also note that the gbXML azimuth attribute calculates the horizontal angle from the north axis to face normally clockwise
↑ replace SegsFusion() with SegsWelding(), more robust and with an angle tolerance for almost parallel segments. the basic idea is to group almost co-lined segments first then create a new line segment for replacement.
↑ SegDistanceToSeg() now return 0 if two lines are intersected on both, or returns the average width of the projection trapezoid.
↑ SegExpansionBox() now takes two distance parameters for rectangle creation.
↑ SegIntersection() now takes two tolerance parameters although these two are correlated. maybe not a good idea
---------------------------------------------
× now, walls spanning the middle plane of two adjacent floors will be selected as qualified space boundaries. before, the plugin only takes walls that are beyond 50% of the floor height
× th

--- a/Gingerbread/Gingerbread.csproj
+++ b/Gingerbread/Gingerbread.csproj
@@ -88,6 +88,8 @@
     <Compile Include="Core\LayoutPatch.cs" />
     <Compile Include="Core\PointAlign.cs" />
     <Compile Include="Core\CurveSimplify.cs" />
+    <Compile Include="Core\EdgeAlign.cs" />
+    <Compile Include="Core\RegionDetect2.cs" />
     <Compile Include="Core\RegionTessellate.cs" />
     <Compile Include="Core\RegionDetect.cs" />
     <Compile Include="Core\XMLGeometry.cs" />
