--- a/Gingerbread/app.config
+++ b/Gingerbread/app.config
@@ -115,6 +115,18 @@
             <setting name="offsetZ" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="tolHoleArea" serializeAs="String">
+                <value>10</value>
+            </setting>
+            <setting name="tolAlignmentRatio" serializeAs="String">
+                <value>1</value>
+            </setting>
+            <setting name="patchFloorHole" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="patchColumn" serializeAs="String">
+                <value>True</value>
+            </setting>
         </Gingerbread.Properties.Settings>
     </userSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" /></startup>
