+ patch wall centerline at joint
+ patch centerline by a segment (length = thickness) perpendicular to it, at the joint of two parallel walls
+ get grid lines and use them in edge alignment
↑ more settings. use abbreviation for settings
× escape 0 area polygon if it collapses to nothing by SimplifyPoly()
× escape 0/null region when serializing JSON for floorplan visualization (ExtExportXML.cs)

--- a/Gingerbread/app.config
+++ b/Gingerbread/app.config
@@ -10,6 +10,9 @@
             <setting name="ShortCurveTolerance" serializeAs="String">
                 <value>0.0025602645573</value>
             </setting>
+            <setting name="tolDouble" serializeAs="String">
+                <value>1E-05</value>
+            </setting>
             <setting name="tolGrouping" serializeAs="String">
                 <value>0.5</value>
             </setting>
@@ -22,11 +25,14 @@
             <setting name="tolAlignment" serializeAs="String">
                 <value>0.11</value>
             </setting>
-            <setting name="tolDouble" serializeAs="String">
-                <value>1E-05</value>
+            <setting name="tolAlignmentRatio" serializeAs="String">
+                <value>1</value>
             </setting>
-            <setting name="checkInfo" serializeAs="String">
-                <value />
+            <setting name="tolHoleArea" serializeAs="String">
+                <value>10</value>
+            </setting>
+            <setting name="tolCollapse" serializeAs="String">
+                <value>0</value>
             </setting>
             <setting name="originX" serializeAs="String">
                 <value>0</value>
@@ -34,16 +40,10 @@
             <setting name="originY" serializeAs="String">
                 <value>0</value>
             </setting>
-            <setting name="exportStruct" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="includeRef" serializeAs="String">
-                <value>False</value>
+            <setting name="originZ" serializeAs="String">
+                <value>0</value>
             </setting>
             <setting name="projInfo" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="spiderPath" serializeAs="String">
                 <value />
             </setting>
             <setting name="projName" serializeAs="String">
@@ -61,9 +61,6 @@
             <setting name="projNumber" serializeAs="String">
                 <value />
             </setting>
-            <setting name="originZ" serializeAs="String">
-                <value>0</value>
-            </setting>
             <setting name="projLatitude" serializeAs="String">
                 <value>31.4</value>
             </setting>
@@ -73,20 +70,44 @@
             <setting name="projElevation" serializeAs="String">
                 <value>5.5</value>
             </setting>
-            <setting name="shadowPrev" serializeAs="String">
+            <setting name="projAzimuth" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="checkInfo" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="geomInfo" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="spiderPath" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="exportStruct" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="includeRef" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="followPrev" serializeAs="String">
                 <value>True</value>
+            </setting>
+            <setting name="followGrid" serializeAs="String">
+                <value>False</value>
             </setting>
             <setting name="exportShade" serializeAs="String">
                 <value>True</value>
             </setting>
-            <setting name="projAzimuth" serializeAs="String">
-                <value>0</value>
-            </setting>
             <setting name="punchMass" serializeAs="String">
                 <value>False</value>
             </setting>
-            <setting name="geomInfo" serializeAs="String">
-                <value />
+            <setting name="patchFloorHole" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="patchColumn" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="patchWall" serializeAs="String">
+                <value>True</value>
             </setting>
             <setting name="drawPrev" serializeAs="String">
                 <value>False</value>
@@ -114,18 +135,6 @@
             </setting>
             <setting name="offsetZ" serializeAs="String">
                 <value>0</value>
-            </setting>
-            <setting name="tolHoleArea" serializeAs="String">
-                <value>10</value>
-            </setting>
-            <setting name="tolAlignmentRatio" serializeAs="String">
-                <value>1</value>
-            </setting>
-            <setting name="patchFloorHole" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="patchColumn" serializeAs="String">
-                <value>True</value>
             </setting>
         </Gingerbread.Properties.Settings>
     </userSettings>
