--- a/Gingerbread/Properties/Settings.settings
+++ b/Gingerbread/Properties/Settings.settings
@@ -26,7 +26,9 @@
     <Setting Name="tolHoleArea" Type="System.Double" Scope="User">
       <Value Profile="(Default)">10</Value>
     </Setting>
-    
+    <Setting Name="tolCollapse" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
     <Setting Name="originX" Type="System.Double" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
@@ -36,7 +38,6 @@
     <Setting Name="originZ" Type="System.Double" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    
     <Setting Name="projInfo" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
@@ -67,7 +68,6 @@
     <Setting Name="projAzimuth" Type="System.Double" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
-
     <Setting Name="checkInfo" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
@@ -77,15 +77,17 @@
     <Setting Name="spiderPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    
     <Setting Name="exportStruct" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="includeRef" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
-    <Setting Name="shadowPrev" Type="System.Boolean" Scope="User">
+    <Setting Name="followPrev" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="followGrid" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="exportShade" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
@@ -99,7 +101,9 @@
     <Setting Name="patchColumn" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
-
+    <Setting Name="patchWall" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
     <Setting Name="drawPrev" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
@@ -127,6 +131,5 @@
     <Setting Name="offsetZ" Type="System.Double" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
-    
   </Settings>
 </SettingsFile>
