--- a/Gingerbread/app.config
+++ b/Gingerbread/app.config
@@ -97,7 +97,7 @@
             <setting name="exportShade" serializeAs="String">
                 <value>True</value>
             </setting>
-            <setting name="punchMass" serializeAs="String">
+            <setting name="createVoid" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="patchFloorHole" serializeAs="String">
